--- a/miner_blitz_index.html
+++ b/miner_blitz_index.html
@@ -64,142 +64,153 @@ function preload ()
     this.load.image('wall_threeway_cross_L', 'res/images/tunnel_threeway_crossing_L.png');
     this.load.image('wall_threeway_cross_R', 'res/images/tunnel_threeway_crossing_R.png');
     this.load.image('wall_threeway_cross_U', 'res/images/tunnel_threeway_crossing_U.png');
+
+    this.load.image('darkDirt', 'res/images/darkbrown.png');
+    this.load.image('lighterDirt', 'res/images/lighterbrown.png');
 }
 
-function create ()
-{
-    //  A simple background for our game
-    this.add.image(400, 300, 'background');
+function generateMap() {
+  tileMatrix = Array(numOfRows).fill().map(()=>Array(numOfColumns).fill(new MapTile('darkDirt')));
 
-
-    walls = this.physics.add.staticGroup();
-    // {
-    //   key: 'wall_hor',
-    //   repeat: 14,
-    //   setXY: { x: 25, y: 25, stepX: 50 }
-    // });
-    //
-    // //  Here we create the ground.
-    // //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
-    // walls.create(775, 25, 'wall_turn_LD');
-    // walls.create(775, 75, 'wall_turn_LU');
-    //
-    // walls = this.physics.add.staticGroup(
-    // {
-    //   key: 'wall_hor',
-    //   repeat: 13,
-    //   setXY: { x: 75, y: 75, stepX: 50 }
-    // });
-    //
-    // walls.create(25, 75, 'wall_turn_RD');
-    // walls.create(25, 125, 'wall_turn_UR');
-    var lastTile = 'wall_undug';
-
-    for (i = 0; i < numOfRows; ++i)
-    {
-      for (j = 0; j < numOfColumns; ++j)
-      {
-         var newTile = getNextTile(lastTile);
-         walls.create(25 + j*50, 25 + i*50, newTile);
-         lastTile = newTile;
-      }
+  for (i = 0; i < numOfColumns; ++i) {
+    for (j = 0; j < numOfRows; ++j) {
+       tileMatrix[i][j].setXY(i*50 + 25, j*50 + 25);
     }
-    //  Now let's create some ledges
-    // platforms.create(600, 400, 'ground');
-    // platforms.create(50, 250, 'ground');
-    // platforms.create(750, 220, 'ground');
-    //
-    // // The player and its settings
-    // player = this.physics.add.sprite(100, 450, 'dude');
-    //
-    // //  Player physics properties. Give the little guy a slight bounce.
-    // player.setBounce(0.2);
-    // player.setCollideWorldBounds(true);
-    //
-    // //  Our player animations, turning, walking left and walking right.
-    // this.anims.create({
-    //     key: 'left',
-    //     frames: this.anims.generateFrameNumbers('dude', { start: 0, end: 3 }),
-    //     frameRate: 10,
-    //     repeat: -1
-    // });
-    //
-    // this.anims.create({
-    //     key: 'turn',
-    //     frames: [ { key: 'dude', frame: 4 } ],
-    //     frameRate: 20
-    // });
-    //
-    // this.anims.create({
-    //     key: 'right',
-    //     frames: this.anims.generateFrameNumbers('dude', { start: 5, end: 8 }),
-    //     frameRate: 10,
-    //     repeat: -1
-    // });
-    //
-    // //  Input Events
-    // cursors = this.input.keyboard.createCursorKeys();
-    //
-    // //  Some stars to collect, 12 in total, evenly spaced 70 pixels apart along the x axis
-    // stars = this.physics.add.group({
-    //     key: 'star',
-    //     repeat: 11,
-    //     setXY: { x: 12, y: 0, stepX: 70 }
-    // });
-    //
-    // stars.children.iterate(function (child) {
-    //
-    //     //  Give each star a slightly different bounce
-    //     child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
-    //
-    // });
-    //
-    // bombs = this.physics.add.group();
-    //
-    // //  The score
-    // scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
-    //
-    // //  Collide the player and the stars with the platforms
-    // this.physics.add.collider(player, platforms);
-    // this.physics.add.collider(stars, platforms);
-    // this.physics.add.collider(bombs, platforms);
-    //
-    // //  Checks to see if the player overlaps with any of the stars, if he does call the collectStar function
-    // this.physics.add.overlap(player, stars, collectStar, null, this);
-    //
-    // this.physics.add.collider(player, bombs, hitBomb, null, this);
+  }
+}
+
+//
+var MapTile = class MapTile {
+  constructor(type, x, y) {
+    this.type = type;
+    this.x = x;
+    this.y = y;
+  }
+
+  function getType() {
+    return this.type;
+  }
+
+  function setXY(x, y) {
+    this.x = x;
+    this.y = y;
+  }
+  
+}
+
+function create () {
+  //  A simple background for our game
+  //this.add.image(400, 300, 'background');
+
+  gameMap = this.physics.add.staticGroup();
+
+  var lastTile = 'wall_undug';
+
+  for (i = 0; i < numOfRows; ++i)
+  {
+    for (j = 0; j < numOfColumns; ++j)
+    {
+       var newTile = tileMatrix[i][j];
+       walls.create(25 + j*50, 25 + i*50, newTile);
+       lastTile = newTile;
+    }
+  }
+  //  Now let's create some ledges
+  // platforms.create(600, 400, 'ground');
+  // platforms.create(50, 250, 'ground');
+  // platforms.create(750, 220, 'ground');
+  //
+  // // The player and its settings
+  // player = this.physics.add.sprite(100, 450, 'dude');
+  //
+  // //  Player physics properties. Give the little guy a slight bounce.
+  // player.setBounce(0.2);
+  // player.setCollideWorldBounds(true);
+  //
+  // //  Our player animations, turning, walking left and walking right.
+  // this.anims.create({
+  //     key: 'left',
+  //     frames: this.anims.generateFrameNumbers('dude', { start: 0, end: 3 }),
+  //     frameRate: 10,
+  //     repeat: -1
+  // });
+  //
+  // this.anims.create({
+  //     key: 'turn',
+  //     frames: [ { key: 'dude', frame: 4 } ],
+  //     frameRate: 20
+  // });
+  //
+  // this.anims.create({
+  //     key: 'right',
+  //     frames: this.anims.generateFrameNumbers('dude', { start: 5, end: 8 }),
+  //     frameRate: 10,
+  //     repeat: -1
+  // });
+  //
+  // //  Input Events
+  // cursors = this.input.keyboard.createCursorKeys();
+  //
+  // //  Some stars to collect, 12 in total, evenly spaced 70 pixels apart along the x axis
+  // stars = this.physics.add.group({
+  //     key: 'star',
+  //     repeat: 11,
+  //     setXY: { x: 12, y: 0, stepX: 70 }
+  // });
+  //
+  // stars.children.iterate(function (child) {
+  //
+  //     //  Give each star a slightly different bounce
+  //     child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
+  //
+  // });
+  //
+  // bombs = this.physics.add.group();
+  //
+  // //  The score
+  // scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
+  //
+  // //  Collide the player and the stars with the platforms
+  // this.physics.add.collider(player, platforms);
+  // this.physics.add.collider(stars, platforms);
+  // this.physics.add.collider(bombs, platforms);
+  //
+  // //  Checks to see if the player overlaps with any of the stars, if he does call the collectStar function
+  // this.physics.add.overlap(player, stars, collectStar, null, this);
+  //
+  // this.physics.add.collider(player, bombs, hitBomb, null, this);
 }
 
 function update ()
 {
-    if (gameOver)
-    {
-        return;
-    }
+  if (gameOver)
+  {
+      return;
+  }
 
-    // if (cursors.left.isDown)
-    // {
-    //     player.setVelocityX(-160);
-    //
-    //     player.anims.play('left', true);
-    // }
-    // else if (cursors.right.isDown)
-    // {
-    //     player.setVelocityX(160);
-    //
-    //     player.anims.play('right', true);
-    // }
-    // else
-    // {
-    //     player.setVelocityX(0);
-    //
-    //     player.anims.play('turn');
-    // }
-    //
-    // if (cursors.up.isDown && player.body.touching.down)
-    // {
-    //     player.setVelocityY(-330);
-    // }
+  // if (cursors.left.isDown)
+  // {
+  //     player.setVelocityX(-160);
+  //
+  //     player.anims.play('left', true);
+  // }
+  // else if (cursors.right.isDown)
+  // {
+  //     player.setVelocityX(160);
+  //
+  //     player.anims.play('right', true);
+  // }
+  // else
+  // {
+  //     player.setVelocityX(0);
+  //
+  //     player.anims.play('turn');
+  // }
+  //
+  // if (cursors.up.isDown && player.body.touching.down)
+  // {
+  //     player.setVelocityY(-330);
+  // }
 }
 
 // function collectStar (player, star)
@@ -241,35 +252,6 @@ function update ()
 //     gameOver = true;
 // }
 
-function generateMap() {
-
-   tileMatrix = Array(numOfRows).fill().map(()=>Array(numOfColumns).fill(new MapTile('wall_undug')));
-
-
-}
-
-function getNextTile(lastTile)
-{
-switch (lastTile) {
-   case 'wall_undug':
-      return 'wall_hor'
-      break;
-   case 'wall_hor':
-      return 'wall_turn_LD';
-      break;
-   default:
-      break;
-}
-return 'wall_undug';
-}
-//
-var MapTile = class MapTile {
-  constructor(type) {
-    this.type = type;
-  }
-
-
-}
 </script>
 
 </body>
